Updated HTML, CSS, and JS

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="experience-duration">07/2023 to 07/2024</div>
                     <ul style="margin-left: 1.5rem; color: #4a5568;">
                         <li>Led the end-to-end development of products, including WhatsApp chatbot, from ideation to launch.</li>
-                        <li>Designed and developed web and mobile applications, contributed to both UI/UX and coding aspects.</li>
+                        <li>Designed web and mobile applications, contributed to both UI/UX and coding aspects.</li>
                         <li>Built dashboards using Excel and Google Data Studio, visualizing product and user metrics.</li>
                         <li>Created product roadmaps, outlining development phases and aligning team efforts to business goals.</li>
                         <li>Facilitated internal hiring, and delivered client presentations and product pitches.</li>
@@ -146,7 +146,7 @@
                 <div class="card">
                     <h2>View My Complete Resume</h2>
                     <p>Click the button below to view my detailed resume with all my skills, experience, and qualifications.</p>
-                    <a href="#" target="_blank" class="resume-button">
+                    <a href="https://drive.google.com/file/d/1iLk7W7N3ILj2SS7AUz_m4xzbqscpYtSo/view?usp=sharing" target="_blank" class="resume-button">
                         <i class="fas fa-file-pdf"></i> View Resume PDF
                     </a>
                 </div>
